package name edit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kuy00/vue-notification",
+  "name": "@kuy472013/vue-notification",
   "description": "Package to display notifications in vue.",
   "version": "1.0.0",
   "private": false,
